--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,7 +10,7 @@
   },
   "applications": {
     "gecko": {
-      "id": "@testpilot-containers",
+      "id": "vpn@mozilla.org",
       "strict_min_version": "67.0"
     }
   },
@@ -24,13 +24,14 @@
     "history",
     "idle",
     "management",
+    "nativeMessaging",
     "storage",
     "tabs",
     "webRequestBlocking",
     "webRequest",
     "proxy",
 
-    "https://stage-vpn.guardian.nonprod.cloudops.mozgcp.net/*"
+    "https://stage-vpn.guardian.nonprod.cloudops.mozgcp.net:443/*"
   ],
   "optional_permissions": [
     "bookmarks"
